Ultimos cambios 4 noviembre

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="#profile">Inicio</a>
                 <a href="#conoceme">Conóceme</a>
                 <a href="#proyectos">Proyectos</a>
-                <a href="#footer">Experiencia y redes</a>
+                <a href="#footer">Experiencia y contacto</a>
             </nav>
         </header>
 
@@ -33,16 +33,17 @@
                   <img src="./Imagenes/foto alejo.jpeg">
                 </div>
                 <div class="section__text">
-                  <p class="section__text__p1">.</p>
                   <h1 class="title">Alejo Marquiegue</h1>
                   <p class="section__text__p2">Licenciado en comercialización</p>
                   <div class="btn-container">
                     <a href="cv.html">
                         <button class="btn btn-color-2">Mi CV</button>
                     </a>
-                    <button class="btn btn-color-1" href='./#contact'>
-                      Contacto
-                    </button>
+                    <a href="https://linktr.ee/alejomarquieguemkt" target="_blank" rel="noopener noreferrer">
+                        <button class="btn btn-color-1">
+                          Contacto
+                        </button>
+                      </a>                      
                   </div>
                 </div>
               </section>
@@ -55,7 +56,7 @@
                 </div>
                 <div class="right-section">
                     <div class="who-am-i">
-                        <span>Un poco de mi</span>
+                        <span>Un poco de mí</span>
                         <h1>¡HOLA!</h1>
                     </div>
                     <p>Soy Alejo, Licenciado en Comercialización graduado en la Universidad Católica de Salta, actualmente me dedico a la rama del Neuromarketing.</p>
@@ -156,15 +157,16 @@
                 </div>
                 <div class="box">
                     <h2>EXPERIENCIAS LABORALES</h2>
-                    <h2>Promotor/vendedor adminsitrativo </h2>
+                    <h2>Promotor/vendedor administrativo </h2>
                     <p>B.S.F (Banco de servicios financieros)</p>
                     <p>B.N.P Paribas (Tarjeta MiCarrefour) Aseguradora</p>
                 </div>
                 <div class="box">
                     <h2>Contacto</h2>
                     <div class="redes-sociales">
-                        <li><a href="#"class="Linkedin">amarquieguemkt@gmail.com</a></li>
+                        <li><a href="#"class="Linkedin">Instagram:amarquieguemkt@gmail.com</a></li>
                         <li><a href="#"class="Instagram">@alejomarquieguemkt</a></li>
+                        <li><a href="#"class="Instagram">Linkedin: Alejo Marquiegue</a></li>
                     </div>
                 </div>
             </div>  
